Robot Model done.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 </head>
 <body>
     <div class="android">
+        <div class="android-hl android-lhand"></div>
+        <div class="android-hl android-rhand"></div>
         <div class="android-face">
-
+            <div class="android-eye"></div>
+            <div class="android-eye"></div>
+        </div>
+        <div class="android-body">
+        </div>
+        <div class="android-legs">
+            <div class="android-hl android-lleg"></div>
+            <div class="android-hl android-rleg"></div>
         </div>
     </div>
     
