--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Android</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Patua+One&family=Spicy+Rice&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1 class="title">ANIMATED ANDROID</h1>
     <div class="android">
         <div class="android-hl android-lhand"></div>
         <div class="android-hl android-rhand"></div>
